# WeatherApp

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  include-python-library.mk  include-python-service.mk
core/: .gitignore  Dockerfile  packages.txt  pyproject.toml  requirements.lint.txt  requirements.txt
core.srv/: Dockerfile  Makefile  manage.py  packages.txt  pyproject.toml  requirements.internal.txt  requirements.lint.txt  requirements.txt
core.srv/tests/: conftest.py  test_geo_api.py  test_geo_stream.py  test_jwtauth_api.py  test_jwtauth_logic.py  test_uihelpers_api.py  test_users_api.py  test_users_stream.py  utils.py
core.srv/weatherapp_core/: api_auth.py  celery.py  constants.py  settings.py  urls.py
core.srv/weatherapp_core/geo/: admin.py  api.py  apps.py  models.py  schema.py
core.srv/weatherapp_core/jwtauth/: api.py  auth.py  logic.py  schema.py
core.srv/weatherapp_core/uihelpers/: api.py  apps.py  schema.py
core.srv/weatherapp_core/users/: admin.py  api.py  schema.py  streamers.py
core/tests/: conftest.py  test_geo_api.py  test_geo_stream.py  test_uihelpers_api.py  test_users_api.py  test_users_stream.py
core/weatherapp_core/: admin.py  api_auth.py  asgi.py  constants.py  permissions.py  settings.py  urls.py  wsgi.py
core/weatherapp_core/geo/: api.py  models.py  streamers.py
core/weatherapp_core/jwtauth/: apps.py  logic.py  schema.py
core/weatherapp_core/uihelpers/: api.py
core/weatherapp_core/users/: api.py  models.py  schema.py
docker-compose/clickhouse/config.d/: docker_related_config.xml  kafka.xml
docker-compose/clickhouse/initdb.d/: 01_databases.sql
docker-compose/haproxy/: haproxy.cfg
docker-compose/kafka/initdb.d/: 01_init.sh
docker-compose/postgres/: create-db.sql
jwtauth.lib/: .gitignore  Makefile  pyproject.toml
jwtauth.lib/tests/: test_logic.py
loader.srv/: .gitignore  Dockerfile  Makefile  packages.txt  pyproject.toml  requirements.lint.txt  requirements.txt
loader.srv/tests/: conftest.py  test_date_range.py  test_locations_consumer.py  test_open_meteo.py  test_weather_tasks.py
loader.srv/weatherapp_loader/: constants.py  date_range.py  logging.py  settings.py  types.py
loader.srv/weatherapp_loader/consumers/: __init__.py  processors.py  sources.py  workers.py
loader.srv/weatherapp_loader/service/: open_meteo.py
loader.srv/weatherapp_loader/storage/: locations.py  redis.py
loader.srv/weatherapp_loader/tasks/: arq.py  kafka_stubs.py  run.py  weather.py  worker.py
main/: Dockerfile  Makefile  manage.py  pyproject.toml  requirements.internal.txt  requirements.txt
main/tests/: test_users_api.py
main/weatherapp_main/: asgi.py  settings.py  urls.py  wsgi.py
main/weatherapp_main/geo/: apps.py  models.py
main/weatherapp_main/geo/migrations/: 0001_initial.py  0002_initial_data.py
main/weatherapp_main/users/: admin.py  schema.py
main/weatherapp_main/users/migrations/: 0001_initial.py
protocol/: Makefile  pyproject.toml
protocol.lib/: pyproject.toml
protocol.lib/src/weatherapp/protocol/: __init__.py  models.py  types.py
protocol.lib/src/weatherapp/protocol/bus/: __init__.py  constants.py  deserializers.py  models.py  serializers.py  types.py
protocol.lib/tests/: test_bus.py  test_bus_deserializers.py  test_bus_serializers.py  test_models.py
protocol/tests/: test_bus.py
query.srv/: Dockerfile  Dockerfile.migrations  Makefile  packages.txt  pyproject.toml  requirements.internal.txt  requirements.txt
query.srv/migrations/: 20241017132253_init.sql
query.srv/tests/: conftest.py  test_aggregated_weather_api.py  test_current_weather_api.py  test_weather_api.py  test_weather_storage.py
query.srv/weatherapp_query/: logging.py  models.py  settings.py  types.py  units.py
query.srv/weatherapp_query/api/: app.py  auth.py  dependencies.py  weather.py
query.srv/weatherapp_query/storage/: clickhouse.py  weather.py
stubs.lib/: Makefile  pyproject.toml
stubs.lib/src/weatherapp/stubs/: clickhouse.py
ui/: Dockerfile  LICENSE.md  Makefile  README.md  index.html  package-lock.json  package.json
ui/src/: app.tsx  config-global.ts  vite-env.d.ts
ui/src/auth/: account-provider.tsx  auth-provider.tsx  protected-route.tsx
ui/src/client/: auth-provider.tsx  auth.ts  forms.ts  locations.ts  server-constants-provider.tsx  types.ts  users.ts  weather-aggregated.ts  weather.ts
ui/src/layouts/: config-nav-dashboard.tsx
ui/src/pages/: explore.tsx  home.tsx  locations.tsx  settings.tsx
ui/src/routes/: protected-route.tsx  sections.tsx
ui/src/utils/: forms.ts  (+2 more)
(+36 files in other folders)
