[project]
name = "weatherapp_main"
authors = [
    {name = "Kostiantyn Korikov", email = "lostclus@gmail.com"},
]
version = "0.0.0"
description = "WeatherApp main service"

[tool.black]
target-version = ["py312"]
exclude = '''
/(
  | venv
  | weatherapp_main/.*/migrations
)/
'''

[tool.ruff]
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "I",   # isort
]
exclude = ["venv", "weatherapp_main/*/migrations"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["ninja.Query"]

[tool.mypy]
mypy_path = [
    "../prometheus/src",
    "../protocol/src",
    "../storage/src",
    "../queue/src",
    ".",
]
plugins = ["mypy_django_plugin.main"]
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
exclude = [
    "^weatherapp_main/.*/migrations",
]

[tool.django-stubs]
django_settings_module = "weatherapp_main.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "weatherapp_main.settings"
